Improvement to demo server